k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: projet-s3
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  rules:
    - host: projet-s3.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: projet-s3
                port:
                  number: 80
